// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Title should display children 1`] = `
<WithStyles(ForwardRef(Typography))
  className="Title"
  variant="h4"
>
  content
</WithStyles(ForwardRef(Typography))>
`;

exports[`Title should extend className 1`] = `
<WithStyles(ForwardRef(Typography))
  className="Title noPaddingBottom"
  variant="h4"
>
  content
</WithStyles(ForwardRef(Typography))>
`;

exports[`Title should handle theme 1`] = `
<Context.Provider
  value="inverted"
>
  <MuiCozyTheme
    variant="inverted"
  >
    <div
      className="palette__CozyTheme--inverted___UL0fq"
    >
      <Title>
        content
      </Title>
    </div>
  </MuiCozyTheme>
</Context.Provider>
`;
